--- a/style.css
+++ b/style.css
@@ -190,3 +190,18 @@ ul {
 .button-reset:hover {
     background-color: var(--color-button-hover);
 }
+
+@media (max-width: 768px) {
+    .main-title {
+        font-size: 28px;
+    }
+
+    .section-title {
+        font-size: 16px;
+    }
+
+    .section-subtitle {
+        font-family: "Inter", serif;
+        font-size: 16px;
+    }
+}
