--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ ul {
 .result-list {
     margin-top: 15px;
     color: #ee3f45;
-    font-size: 22px;
+    font-size: 18px;
     font-weight: bold;
     text-align: center;
 }
@@ -226,5 +226,20 @@ ul {
         font-size: 16px;
     }
 
-
+    ul {
+        list-style-type: none;
+        color: var(--color-text);
+        font-weight: bold;
+        font-family: "Inter", sans-serif;
+        font-size: 14px;
+        margin: 20px 0;
+    }
+    
+    .result-list {
+        margin-top: 15px;
+        color: #ee3f45;
+        font-size: 14px;
+        font-weight: bold;
+        text-align: center;
+    }
 }
